--- a/typst.toml
+++ b/typst.toml
@@ -5,3 +5,4 @@ entrypoint = "lib.typ"
 authors = ["Daniel F.H."]
 license = "LGPLv3"
 description = "A template for writing movie/tv/theater-scripts in screenplay format."
+repository = "https://github.com/danielFHcode/typst-screenplay"
